[package]
name = "cosmos-client"
version = "0.1.9"
edition = "2021"
description = "Cosmos-SDK rust rpc client"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cosmrs = { version = "0.14.0"}
env_logger = "0.10.0"
prost = { version= "0.11.9" }
rand_core = "0.6.4"
tendermint = "0.33.0"
tendermint-rpc = {version="0.33.0", features=["http-client"]}
tendermint-proto = {version="0.33.0"}
cosmos-sdk-proto = {version="0.19.0", features=["cosmwasm"]}
prost-types = "0.11.9"
serde_json = "1.0.108"
serde = { version="1.0.188", features=["serde_derive"]}
thiserror = "1.0.48"
hex = "0.4.3"

[dev-dependencies]
tokio = { version = "1.32.0", features = ["full"] }
cosmwasm-schema = "1.4.0"
cosmwasm-std = "1.4.0"
colored = "2.0.4"
